--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-markdown": "^4.3.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.3.1",
     "redux": "^4.0.5",
     "uuid": "^3.4.0"
   },
